--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('/UIU.jpg') no-repeat center center/cover;
+            background: url('UIU.jpg') no-repeat center center/cover;
             text-align:start;
             margin: 0;
             display: flex;
